# spark-art

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/dbinit/: init.sql
backend/dbrepo/: postgresdb.py
backend/driver/: azure_blob_storage.py  postgres.py
backend/models/: models.py
backend/routers/: artworkRouter.py  commentRouter.py  router.py  topicRouter.py  userRouter.py
backend/services/authrepo/: jwt_repo.py
backend/services/hashrepo/: bcrypt_repo.py
backend/services/imagerepo/: azure_repo.py
backend/utils/: http.py
frontend/: .gitignore  next.config.mjs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/login/: route.ts
frontend/src/app/api/logout/: route.ts
frontend/src/app/api/register/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/topics/: page.tsx
frontend/src/app/topics/[id]/: page.tsx
frontend/src/app/topics/[id]/art/[artid]/: page.tsx
frontend/src/app/users/[id]/: page.tsx
frontend/src/lib/components/client/: artCard.tsx  index.ts
frontend/src/lib/components/server/: navbar.tsx
frontend/src/lib/icons/: Comment.tsx  Plus.tsx  Search.tsx  ThumbsUp.tsx  index.ts
frontend/src/lib/models/: index.ts
frontend/src/repo/: artRepo.ts  commentRepo.ts  index.ts  repository.ts  topicRepo.ts  userRepo.ts
